samples/_failures_safe/1761092010_66e37e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1145ba72.c: In function ‘main’:
./samples/SAFE/__tmp_1145ba72.c:154:19: error: expected ‘;’ at end of input
  154 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_1145ba72.c:154:13: error: expected declaration or statement at end of input
  154 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_1145ba72.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1145ba72.c:154:13: error: expected declaration or statement at end of input
